; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb20.c_libusb20_dev_set_power_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libusb/extr_libusb20.c_libusb20_dev_set_power_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libusb20_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libusb20_dev_set_power_mode(%struct.libusb20_device* %0, i32 %1) #0 {
  %3 = alloca %struct.libusb20_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.libusb20_device* %0, %struct.libusb20_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.libusb20_device*, %struct.libusb20_device** %3, align 8
  %7 = getelementptr inbounds %struct.libusb20_device, %struct.libusb20_device* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = bitcast {}** %9 to i32 (%struct.libusb20_device*, i32)**
  %11 = load i32 (%struct.libusb20_device*, i32)*, i32 (%struct.libusb20_device*, i32)** %10, align 8
  %12 = load %struct.libusb20_device*, %struct.libusb20_device** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 %11(%struct.libusb20_device* %12, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
